--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>IT Infrastructure Assistant</h1>
-            <p class="subtitle">Ask questions about enterprise computing, virtualization, and EUC solutions</p>
+            <p class="subtitle">Ask questions about ITIS and EUC solutions</p>
         </header>
 
         <div class="chat-container">
@@ -34,7 +34,7 @@
         </div>
 
         <footer>
-            <p>Powered by Ollama and ChromaDB | Documents from Dell, Nutanix, and EUC resources</p>
+            <p>Powered by Ollama and ChromaDB | Documents from Dell, Cisco, Fortinet, IBM and Juniper resources</p>
         </footer>
     </div>
 
