accuracy fixed, favicon added

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>IT Infrastructure Assistant</title>
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:,"> <!-- Prevent favicon requests -->
+    <link rel="icon" href="./assets/infra.png"> <!-- Prevent favicon requests -->
 </head>
 <body>
     <div class="container">
